# glintindex

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  win.yml
crates/glintindex-cli/: Cargo.toml
crates/glintindex-cli/src/: cli.rs  main.rs  progress.rs
crates/glintindex-cli/src/commands/: clear.rs  config.rs  folders.rs  index.rs  init.rs  mod.rs  rebuild.rs  search.rs  stats.rs
crates/glintindex-core/: Cargo.toml
crates/glintindex-core/src/: error.rs  lib.rs  logging.rs
crates/glintindex-core/src/app/: mod.rs  service.rs  statistics.rs
crates/glintindex-core/src/config/: config.rs  defaults.rs  loader.rs  mod.rs  paths.rs
crates/glintindex-core/src/index/: mapper.rs  mod.rs  schema.rs  service.rs  statistics.rs  stats.rs
crates/glintindex-core/src/logging/: init.rs  mod.rs
crates/glintindex-core/src/metadata/: database.rs  migrations.rs  mod.rs  models.rs  repository.rs
crates/glintindex-core/src/model/: document.rs  indexed_folder.rs  mod.rs  search_query.rs  search_result.rs
crates/glintindex-core/src/parser/: docx.rs  mod.rs  odt.rs  pdf.rs  pptx.rs  registry.rs  rtf.rs  text.rs  trait_impl.rs  xlsx.rs
crates/glintindex-core/src/preview/: encoding.rs  highlight.rs  loader.rs  mod.rs  service.rs  syntax.rs
crates/glintindex-core/src/scanner/: ignore.rs  mod.rs  parser.rs  progress.rs  service.rs  statistics.rs
crates/glintindex-core/src/search/: mod.rs
crates/glintindex-core/src/tasks/: job.rs  manager.rs  mod.rs  progress.rs
crates/glintindex-core/src/traits/: indexer.rs  mod.rs  scanner.rs  search_engine.rs
crates/glintindex-core/src/watcher/: events.rs  mod.rs  service.rs
crates/glintindex-gui/: Cargo.toml
crates/glintindex-gui/assets/: glintindex.desktop
crates/glintindex-gui/resources/themes/: dark.css  light.css
crates/glintindex-gui/src/: application.rs  main.rs  message.rs  state.rs  theme.rs  window.rs
crates/glintindex-gui/src/app/: application.rs  mod.rs
crates/glintindex-gui/src/file_actions/: clipboard.rs  mod.rs  open.rs  reveal.rs
crates/glintindex-gui/src/pages/: main.rs  mod.rs
crates/glintindex-gui/src/pages/settings/: about.rs  general.rs  ignored_folders.rs  index_page.rs  indexed_folders.rs  layout.rs  mod.rs  navigation.rs
crates/glintindex-gui/src/theme/: manager.rs  mod.rs
crates/glintindex-gui/src/ui/: empty_state.rs  mod.rs  preview.rs  results.rs  search_bar.rs  settings.rs  status_bar.rs  toolbar.rs
crates/glintindex-gui/src/ui/settings/: about.rs  appearance.rs  general.rs  ignored_folders.rs  index_page.rs  indexed_folders.rs  mod.rs
crates/glintindex-gui/src/widgets/: mod.rs  preview.rs  results_list.rs  search_bar.rs  status_bar.rs
