[workspace]
resolver = "3"
members = [
    "crates/glintindex-core",
    "crates/glintindex-cli",
    "crates/glintindex-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/zer0/dev/rust/glintindex"
rust-version = "1.85"

[workspace.dependencies]
glintindex-core = { path = "crates/glintindex-core" }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
iced = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
tracing = "0.1.44"
walkdir = "2.5.0"
notify = "8.2.0"
rayon = "1.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tantivy = "0.26.1"
