[workspace]
resolver = "3"
members = [
    "crates/glintindex-core",
    "crates/glintindex-cli",
    "crates/glintindex-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/riccione/glintindex"
rust-version = "1.85"

[workspace.dependencies]
glintindex-core = { path = "crates/glintindex-core" }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
# iced removed — replaced by gtk4
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-log = "0.2.0"
walkdir = "2.5.0"
notify = "8.2.0"
rayon = "1.12.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tantivy = "0.26.1"
open = "5.3.6"
rfd = "0.17.2"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
pdf-extract = "0.12.0"
docx-lite = "0.2.0"
calamine = "0.36.0"
zip = "8.6.0"
quick-xml = "0.41.0"
rtf-parser = "0.4.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true
