[package]
name = "glintindex-cli"
description = "CLI interface for the GlintIndex desktop search engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "glintindex"
path = "src/main.rs"

[dependencies]
glintindex-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
