[package]
name = "glintindex-cli"
description = "CLI interface for the GlintIndex desktop search engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
glintindex-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif = "0.18.4"

[dev-dependencies]
tempfile = "3"
