[package]
name = "glintindex-core"
description = "Core library for the GlintIndex desktop search engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tantivy.workspace = true
walkdir.workspace = true

[dev-dependencies]
serde_json = "1"
tempfile = "3"
