[package]
name = "glintindex-core"
description = "Core library for the GlintIndex desktop search engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["parser-pdf", "parser-docx", "parser-xlsx", "parser-pptx", "parser-rtf", "parser-odt"]
parser-pdf = ["dep:pdf-extract"]
parser-docx = ["dep:docx-lite", "dep:zip"]
parser-xlsx = ["dep:calamine"]
parser-pptx = ["dep:zip", "dep:quick-xml"]
parser-rtf = ["dep:rtf-parser"]
parser-odt = ["dep:zip", "dep:quick-xml"]

[dependencies]
dirs.workspace = true
notify = "8.2.0"
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tantivy.workspace = true
walkdir.workspace = true
syntect.workspace = true
rusqlite.workspace = true

# Document parser dependencies
pdf-extract = { workspace = true, optional = true }
docx-lite = { workspace = true, optional = true }
calamine = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }
rtf-parser = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
