[package]
name = "glintindex-gui"
description = "GUI interface for the GlintIndex desktop search engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "glintindex-gui"
path = "src/main.rs"

[dependencies]
glintindex-core.workspace = true
gtk = { package = "gtk4", version = "=0.11.4" }
open.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
