[package]
name = "glintindex-gui"
description = "GUI interface for the GlintIndex desktop search engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
glintindex-core.workspace = true
gtk = { package = "gtk4", version = "=0.11.4" }
open.workspace = true
tracing.workspace = true
tracing-log = "0.2.0"
anyhow.workspace = true
tokio.workspace = true
rfd.workspace = true

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "riccione"
copyright = "2024 GlintIndex Contributors"
license-file = ["../../LICENSE", "0"]
extended-description = "A fast, local desktop search engine with a GTK4 GUI"
section = "utils"
priority = "optional"
depends = "libgtk-4-0, libgtk-4-common"
assets = [
    ["target/release/glintindex-gui", "/usr/bin/", "755"],
    ["assets/glintindex.desktop", "/usr/share/applications/", "644"],
    ["assets/glintindex.svg", "/usr/share/icons/hicolor/scalable/apps/", "644"],
]
